Title fix on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -438,6 +438,10 @@ amp-img.cover img {
   z-index: 2
 }
 
+.f1d7 {
+  font-size: 1.7rem;
+}
+
 #small-languages-wrap {
   display: none;
 }
